--- a/tex/Algebra/Vector Spaces.tex
+++ b/tex/Algebra/Vector Spaces.tex
@@ -1193,7 +1193,7 @@
 	\boxeddefinition{The \textbf{Euclidean coordinate spaces} are the real coordinate spaces $\R{n}$ equipped with the \textbf{standard norm},
 		\[ \norm{\v} = \sqrt{v_1^2 + \cdots + v_n^2} \]
 		which is considered to be the \textbf{length} of the vector in the space $\R{n}$.
-	}
+	}\label{def:euclidean-norm}
 
 	\note{\begin{itemize}
 			\item{The Euclidean norm (or standard norm) is the square root of the dot product of the vector with itself,
@@ -1238,8 +1238,8 @@
 
 	\medskip\note{This relationship is the foundation of analytic geometry.}
 
-	\bigskip
-	\subsubsection{Orthogonality}\label{sssection:orthogonality}
+	\biggerskip
+	\subsubsubsection{Orthogonality in Euclidean Spaces}\label{sssection:euclidean-orthogonality}
 	\boxeddefinition{Two nonzero vectors $\v$ and $\w$ are said to be \textbf{orthogonal} if their dot product is zero, i.e.
 		\[ \v\dotprod\w = 0. \]
 	}
